[package]
name = "webmercator_tiles"
version = "1.0.0"
edition = "2021"
authors = ["Swarkin"]
description = "Rust crate to convert lat/lon coordinates to webmercator tiles"
repository = "https://github.com/Swarkin/webmercator_tiles"
keywords = ["openstreetmap", "webmercator", "tiles", "projection"]
license = "MIT"
